--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                 </div>
                 <div style="overflow: hidden; margin-top: 20px">
                     Hi, I am <b>Liangfen Du (Chinese: 杜良芬)</b>. I am an assistant professor in the Department of
-                    Building Environment and Energy Engineering at the Hong Kong Polytechnic Univeristy.
+                    Building Environment and Energy Engineering at The Hong Kong Polytechnic Univeristy.
                     My research interests include: 
                         <li>Noise reduction technologies enabling natural ventilation</li>
                         <li>Acoustic metasurfaces</li>
@@ -224,15 +224,13 @@
             <div class="container">
                 <h4 style="color: rgb(179, 5, 5);">News</h4>
                 <ul>
-                    <p>07/2024: <u>I am seeking potential PhD candidates, Master’s
-                            graduates, Postdocs, and exchange PhD students to join my team</u>. If you are
-                        interested in
-                        research on building acoustics, environmental noise control,
-                        acoustic metasurfaces, and other acoustics-related areas, please send your CV,
-                        transcript, and list of publications to me via email: liangfen.du@polyu.edu.hk
+                    <p style="text-align: justify;">07/2024: <u>I am continuously seeking potential PhD candidates, Master’s graduates, Postdocs,
+                        and exchange PhD students to join my team.</u>. If you are interested in research on building
+                        acoustics, environmental noise control, acoustic metasurfaces, or other acoustics-related areas,
+                        please send your CV, transcript, and list of publications to me via email at liangfen.du@polyu.edu.hk
                     </p>
 
-                    <p>07/2024: <u>I also provide consultancy services</u> in various acoustic-related areas,
+                    <p style="text-align: justify;">07/2024: <u>I also provide consultancy services</u> in various acoustic-related areas,
                         including Noise Impact Assessment, Room Acoustics, Noise and Vibration Control,
                         Acoustical Measurement, and other related fields.</p>
                 </ul>
