--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                 <h4 style="color: rgb(179, 5, 5);">News</h4>
                 <ul>
                     <p style="text-align: justify;">07/2024: <u>I am continuously seeking potential PhD candidates, Master’s graduates, Postdocs,
-                        and exchange PhD students to join my team.</u>. If you are interested in research on building
+                        and exchange PhD students to join my team.</u> If you are interested in research on building
                         acoustics, environmental noise control, acoustic metasurfaces, or other acoustics-related areas,
                         please send your CV, transcript, and list of publications to me via email at liangfen.du@polyu.edu.hk
                     </p>
