--- a/index.html
+++ b/index.html
@@ -222,9 +222,9 @@
                 </div>
             </div>
             <div class="container">
-                <h4 style="color: rgb(179, 5, 5);">News</h4>
+                <h4 style="color: rgb(179, 5, 5);">Pin to Top</h4>
                 <ul>
-                    <p style="text-align: justify;">07/2024: <u>I am continuously seeking potential PhD candidates,
+                    <p style="text-align: justify;"><u>I am continuously seeking potential PhD candidates,
                             Master’s graduates, Postdocs,
                             and exchange PhD students to join my team.</u> If you are interested in research on building
                         acoustics, environmental noise control, acoustic metasurfaces, or other acoustics-related areas,
@@ -232,10 +232,18 @@
                         liangfen.du@polyu.edu.hk
                     </p>
 
-                    <p style="text-align: justify;">07/2024: <u>I also provide consultancy services</u> in various
+                    <p style="text-align: justify;"><u>I also provide consultancy services</u> in various
                         acoustic-related areas,
                         including Noise Impact Assessment, Room Acoustics, Noise and Vibration Control,
                         Acoustical Measurement, and other related fields.</p>
+                </ul>
+                <h4 style="color: rgb(179, 5, 5);">News</h4>
+                <ul>
+                    <p style="text-align: justify;">08/2024: I was invited to Hong Kong Institute of Acoustics (HKIOA)
+                        as a speaker to give a talk on "Noise Reduction Enabling Natural Ventilation Technologies".</p>
+                    </p>
+                    <p style="text-align: justify;">08/2024: Welcome Ma Kai (马凯) to join the team as an exchange
+                        student!</p>
                 </ul>
 
 
