--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                 </ul>
                 <h4 style="color: rgb(179, 5, 5);">News</h4>
                 <ul>
-                    <p style="text-align: justify;">08/2024: Welcome Ma Kai (马凯) to my team as a visiting student.
+                    <p style="text-align: justify;">08/2024: Welcome Ma Kai (马凯) to my team as a visiting student!
                     </p>
                     <p style="text-align: justify;">08/2024: I was invited by the Hong Kong Institute of Acoustics
                         (HKIOA) and the Australian Institute of Building (AIB) to give a talk on “Noise Reduction
