add team-building image

--- a/index.html
+++ b/index.html
@@ -239,6 +239,21 @@
                 </ul>
                 <h4 style="color: rgb(179, 5, 5);">News</h4>
                 <ul>
+                    <!-- <p style="text-align: justify;">11/2024: First team building, from left to rigth. GU Ningnan, ZHOU Tong, MA Kai, DU Haoran, DU Liangfen 
+                        <div class="card-image">
+                            <img src="/assets/img/team-building-202411.jpg" style="width: 150px; margin-top: 20px; margin-bottom: 20px;">
+                        </div>
+                    </p> -->
+                    <div style="display: flex; align-items: center;">
+                        <div style="flex: 1; text-align: justify;">
+                            <p>11/2024: First team building, from left to right. GU Ningnan, ZHOU Tong, MA Kai, DU Haoran, DU Liangfen</p>
+                        </div>
+                        <div style="flex: 0; margin-left: 20px; margin-right: 20px;">
+                            <img src="/assets/img/team-building-202411.jpg" style="width: 200px;">
+                        </div>
+                    </div>
+                    <p style="text-align: justify;">10/2024: Welcome Dr. Zhou Tong (周桐) to my team as a postdoc fellow!
+                    </p>
                     <p style="text-align: justify;">08/2024: Welcome Ma Kai (马凯) to my team as a visiting student!
                     </p>
                     <p style="text-align: justify;">08/2024: I was invited by the Hong Kong Institute of Acoustics
