--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                         style="width: 150px; margin-top: 20px; margin-bottom: 20px;">
                 </div>
                 <div style="overflow: hidden; margin-top: 20px">
-                    Hi, I am <b>Liangfen Du (Chinese: 杜良芬)</b>. I am an assistant professor in the Department of
+                    Hi, I am <b>Liangfen Du (Chinese: 杜良芬)</b>, an assistant professor in the Department of
                     Building Environment and Energy Engineering at The Hong Kong Polytechnic Univeristy.
                     My research interests include:
                     <li>Noise reduction technologies enabling natural ventilation</li>
