revise service page

--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -5,8 +5,25 @@ permalink: /teaching/
 author_profile: true
 ---
 
-{% include base_path %}
+<h2>2024-2025 @PolyU</h2>
+
+<ul>
+  <li>BSE 4413 - Indoor Air Quality</li>
+  <li>BSE 2216 - Engineering Thermodaynamics</li>
+  <li>BSE 5412 - Indoor Environment Quality</li>
+  <li>BSE 5472 - Research methods</li>
+</ul>
+
+<h2>Before 2024 @NUS</h2>
+<ul>
+  <li>Acoustic simulation for undergraduate students in the module "AR59531 Design of Soundscape and Built Environment"
+  </li>
+  <li>"Environmental Noise Simulation and Assessment" in the "Acoustics Training Program for the National Environmental
+    Agency (NEA) of Singapore". (2018-2019)</li>
+</ul>
+
+<!-- {% include base_path %}
 
 {% for post in site.teaching reversed %}
   {% include archive-single.html %}
-{% endfor %}
+{% endfor %} -->
