--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -12,9 +12,9 @@ author_profile: true
 
 <h2>2024-2025 @PolyU</h2>
 <ul>
-  <li>BSE 4413 - Indoor Air Quality</li>
+  <li>BSE 4413 - Indoor Air Quality Engineering</li>
   <li>BSE 2216 - Engineering Thermodaynamics</li>
-  <li>BSE 5412 - Indoor Environment Quality</li>
+  <li>BSE 5412 - Indoor Environment Quality Assessment</li>
   <li>BSE 574 - Research Methods</li>
   <li>BSE 575 - Dissertation</li>
 </ul>
