--- a/_pages/research.html
+++ b/_pages/research.html
@@ -30,7 +30,7 @@ author_profile: true
 <h2>Research Projects</h2>
 <ol class="publications">
   <li>Principle Investigator: A novel acoustic metagrating barrier for traffic noise reduction. (Environment and
-    Conservation Fund, HKD 760,592, Grant No. A0053257)</li>
+    Conservation Fund, HKD 760,592.)</li>
   <li>Principle Investigator: Outgoing Visit to University College London. (PAIR International Collaboration Scheme, HKD
     21,606.9)
   </li>
@@ -38,13 +38,13 @@ author_profile: true
     Security and Sustainability. (PolyU, HKD 1,500,000, HKD 300,000 awarded to Dr. DU)
   </li>
   <li>Principle Investigator: Traffic noise reduction enabling natural ventilation using ultracompact acoustic
-    metagratings. (PolyU (UGC) Start-up Fund for New Recruits, HKD 1,000,000, Grant No. A0051011)</li>
+    metagratings. (PolyU (UGC) Start-up Fund for New Recruits, HKD 1,000,000.)</li>
   <li>Main investigator: Meta-surface based broadband ultrasonic
     deep-subwavelength
-    imaging (MOE AcRF Tier 2, SGD $832,128)</li>
+    imaging (MOE AcRF Tier 2, SGD 832,128)</li>
   <li>Main investigator: Enhancing aural comfort in Singapore Homes through
     NUS-CDL Smart
-    Green Home Test-Bedding Studies (NUS – CDL joint grant, SGD $298,000)</li>
+    Green Home Test-Bedding Studies (NUS – CDL joint grant, SGD 298,000)</li>
 </ol>
 
 
