--- a/_pages/research.html
+++ b/_pages/research.html
@@ -35,7 +35,7 @@ author_profile: true
     21,606.9)
   </li>
   <li>Co-Investigator: Upgrading BEEE laboratory facilities to enable advanced researches through improved Safety,
-    Security and Sustainability. (PolyU, HKD 1,500,000, HKD 300,000 awarded to Dr. DU)
+    Security and Sustainability. (BEEE Safety Research Fudn, HKD 1.5M, HKD 0.3M awarded to Dr. DU)
   </li>
   <li>Principle Investigator: Traffic noise reduction enabling natural ventilation using ultracompact acoustic
     metagratings. (PolyU (UGC) Start-up Fund for New Recruits, HKD 1,000,000.)</li>
