--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -7,6 +7,8 @@ author_profile: true
 
 <h2>2025-2026 @PolyU</h2>
 <ul>
+  <li>BSE 5410 - Noise and Vibration in Sustainable Built Environment</li>
+  <li>BSE 4418 - Architectural Acoustics</li>
   <li>BSE 3716 - Research Methods in Building Technologies</li>
 </ul>
 
